cmake_minimum_required(VERSION 2.6)
project(hash_maker CXX C)
if(MINGW)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--enable-auto-import")
elseif(DEFINED mingw_linux)
    set(CMAKE_SYSTEM_NAME Windows)
    set(CMAKE_C_COMPILER i486-mingw32-gcc)
    set(CMAKE_CXX_COMPILER i486-mingw32-g++)
    set(CMAKE_FIND_ROOT_PATH /usr/i486-mingw32)

    set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
    set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
    set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--enable-auto-import -static")
elseif(DEFINED mingw_64_linux)
    set(CMAKE_SYSTEM_NAME Windows)
    set(CMAKE_C_COMPILER x86_64-w64-mingw32-gcc)
    set(CMAKE_CXX_COMPILER x86_64-w64-mingw32-g++)
    set(CMAKE_FIND_ROOT_PATH /usr/x86_64-w64-mingw32)

    set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
    set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
    set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--enable-auto-import -static")
endif(MINGW)
add_subdirectory(hash_maker)
#The following softwares are for developping. Uncomment if needed.
#add_subdirectory(tools/one_million_a)
#add_subdirectory(tools/devsuite)
