#You shouldn't use openmp; It runs more slowly.
find_package(OpenMP)
add_executable(hash_maker main.cxx basis.cxx context.cxx md5_context.cxx md5.cxx rmd6_context.cxx rmd6.cxx)
set(flag "")
if(CMAKE_COMPILER_IS_GNUCXX)
    execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
    
    if(GCC_VERSION VERSION_LESS "4.7")
        set(flag "${flag} -std=gnu++0x")
    else(GCC_VERSION VERSION_LESS "4.7")
        set(flag "${flag} -std=gnu++11")
    endif(GCC_VERSION VERSION_LESS "4.7")
    
    message(STATUS "C++0x has been enabled.")
else(CMAKE_COMPILER_IS_GNUCXX)
    message(SEND_ERROR "GCC is needed to build this software.")
endif(CMAKE_COMPILER_IS_GNUCXX)

if(OPENMP_FOUND)
    set(flag "${flag} ${OpenMP_CXX_FLAGS}")
    target_link_libraries(hash_maker gomp)
endif(OPENMP_FOUND)
message(STATUS "FLAG:${flag}")
set_property(TARGET hash_maker PROPERTY COMPILE_FLAGS ${flag})
if(NOT WIN32)
    install(TARGETS hash_maker DESTINATION /usr/bin)
endif(NOT WIN32)
